[gd_scene load_steps=6 format=3 uid="uid://b4ofrx8t4js3c"]

[ext_resource type="Script" path="res://ghost_3.gd" id="1_n408t"]
[ext_resource type="Texture2D" uid="uid://dohwwc06rf2oh" path="res://New Piskel (8).png" id="1_t0ev8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pt86r"]
size = Vector2(16, 2)

[sub_resource type="CircleShape2D" id="CircleShape2D_dbfxq"]
radius = 9.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2x1w"]
size = Vector2(1, 9)

[node name="ghost3" type="RigidBody2D"]
script = ExtResource("1_n408t")

[node name="NewPiskel(8)" type="Sprite2D" parent="."]
texture = ExtResource("1_t0ev8")
hframes = 8
vframes = 8
frame = 27

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_pt86r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_dbfxq")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(9, 6)
shape = SubResource("RectangleShape2D_u2x1w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-8.5, 5.5)
shape = SubResource("RectangleShape2D_u2x1w")

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
